app/server/project/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: renty-api-ingress
  annotations:
    kubernetes.io/tls-acme: "false"
spec:
  rules:
    - host: renty-api.cloud.okteto.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: renty-api-service
                port:
                  number: 8080
